--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 body{
-    background-color: grey;
+        background-image: linear-gradient(95deg, #31a750, #a07925,red,purple);
+        background-size: 500%;
+        animation:animacion 10s infinite;
+    
+}
+@keyframes animacion{
+    0%{
+        background-position: 0% 50%;
+    }
+    50%{
+        background-position: 50% 100%;
+    }
+    100%{
+        background-position:100% 50%;
+    }
 }
